Update sign to include side

--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0-SNAPSHOT</version>
-                <configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.3.0-SNAPSHOT</version>
+				<configuration>
 					<createDependencyReducedPom>false</createDependencyReducedPom>
 					<filters>
 						<filter>
@@ -47,26 +47,26 @@
 							</excludes>
 						</filter>
 					</filters>
-                    <relocations>
-                        <relocation>
-                            <pattern>co.aikar.commands</pattern>
-                            <shadedPattern>me.EtienneDx.RealEstate.acf</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>me.EtienneDx.AnnotationConfig</pattern>
-                            <shadedPattern>me.EtienneDx.RealEstate.AnnotationConfig</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+					<relocations>
+							<relocation>
+									<pattern>co.aikar.commands</pattern>
+									<shadedPattern>me.EtienneDx.RealEstate.acf</shadedPattern>
+							</relocation>
+							<relocation>
+									<pattern>me.EtienneDx.AnnotationConfig</pattern>
+									<shadedPattern>me.EtienneDx.RealEstate.AnnotationConfig</shadedPattern>
+							</relocation>
+					</relocations>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+								<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4.1</version>
@@ -112,14 +112,18 @@
 			<url>https://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
 		<repository>
-	        <id>aikar</id>
-	        <url>https://repo.aikar.co/content/groups/aikar/</url>
-    	</repository>
-    	<!-- EssentialsX repo -->
-    	<repository>
-	        <id>ess-repo</id>
-	        <url>https://ci.ender.zone/plugin/repository/everything/</url>
-	    </repository>
+				<id>aikar</id>
+				<url>https://repo.aikar.co/content/groups/aikar/</url>
+		</repository>
+		<!-- EssentialsX repo -->
+		<repository>
+				<id>ess-repo</id>
+				<url>https://ci.ender.zone/plugin/repository/everything/</url>
+		</repository>
+    <!-- <repository>
+        <id>papermc</id>
+        <url>https://papermc.io/repo/repository/maven-public/</url>
+    </repository> -->
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -128,6 +132,12 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
+    <!-- <dependency>
+			<groupId>io.papermc</groupId>
+			<artifactId>paperlib</artifactId>
+			<version>1.0.7</version>
+			<scope>compile</scope>
+		</dependency> -->
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
